# capfit

./: .gitignore  BUILD_INSTRUCTIONS.md  Capfit.spec  README.md  Usage  build_desktop.py  pyproject.toml  requirements-desktop.txt  requirements.txt
capfit/: __init__.py  cli.py  pdf_builder.py  utils.py
capfit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
capfit/web/: server.py
capfit/web/static/: app.js  style.css
capfit/web/templates/: index.html  result.html
cli/: __init__.py  app.py
desktop/: __init__.py  main.py
desktop/gui/: __init__.py  main_window.py  preview_widget.py  settings_dialog.py
shared/: __init__.py
shared/cli/: __init__.py  base.py
shared/core/: __init__.py  pdf_builder.py  splitter.py
web/: __init__.py  server.py
web/templates/: index.html  review.html
